--- a/package.json
+++ b/package.json
@@ -12,11 +12,28 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "crypto-js": "^4.1.1",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
+    "ethers": "^5.7.2",
     "next": "13.0.5",
+    "rambda": "^7.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.3"
+    "typescript": "4.9.3",
+    "wagmi": "^0.8.6"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@types/crypto-js": "^4.1.1",
+    "autoprefixer": "^10.4.13",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
+    "postcss": "^8.4.19",
+    "prettier": "^2.8.0",
+    "tailwindcss": "^3.2.4",
+    "ts-jest": "^29.0.3"
   }
 }
